--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <properties>
         <java.version>11</java.version>
         <jib.maven-plugin-version>1.8.0</jib.maven-plugin-version>
+        <sonar.projectKey>piomin_sample-java-kubemq</sonar.projectKey>
+        <sonar.organization>piomin</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
